src/docker-compose.nginx/templates/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -c -f .\docker-compose.nginx.yml
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert -c -f .\docker-compose.nginx.yml
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - args:
        # - "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
        image: 'hansehe/nginx-dev-blog:1.0.0'
        name: nginx
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
        # volumeMounts:
        # - mountPath: /etc/letsencrypt
        #   name: certbot-conf
        # - mountPath: /var/www/certbot
        #   name: certbot-www
      restartPolicy: Always
      # volumes:
      # - name: certbot-conf
      #   persistentVolumeClaim:
      #     claimName: certbot-conf
      # - name: certbot-www
      #   persistentVolumeClaim:
      #     claimName: certbot-www
status: {}
