src/docker-compose.nginx/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
    https:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 443
